# webgpu

./: .gitignore  .vercelignore  BIND_GROUP_BUG_ANALYSIS.md  CHANGELOG.md  COMPARISON.md  CONTRIBUTING.md  COVERAGE.md  Cargo.toml  EXTERNALOBJECT_FIX.md  LICENSE  PROGRESS.md  README.md  REFACTORING.md  RELEASE_SUMMARY.md  ROADMAP.md  SUMMARY.md  TESTING.md  WEBGPU_COMPLIANCE.md  WEBGPU_STANDARD_COMPLIANCE.md  WEBGPU_SYSTEMATIC_AUDIT.md  bunfig.toml  index.d.ts  index.darwin-arm64.node  index.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test-bun.sh  test-cb.js  test-detailed.js  test-standard-api.js  v0.5.0_POST_MORTEM.md  webgpu.d.ts  webgpu.darwin-arm64.node  webgpu.js
.changeset/: config.json  fix-buffer-unmap-v0.11.3.md  fix-getmappedrange-arraybuffer.md  fix-native-binaries.md  initial-release.md  major-compliance-upgrade.md  major-external-fix.md  major-v1-documentation-update.md  remove-writemappedrange.md  test-multi-package-notification.md  test-slack-fix.md  test-slack-notifications.md  test-workflow.md  webgpu-api-improvements.md  webgpu-standard-compliance.md
artifacts/: webgpu.darwin-arm64.node
docs/: index.md
examples/: basic.js  compute.js  cube.js  indirect-compute.js  indirect-draw.js  mrt.js  msaa.js  render-bundle.js  texture-upload.js  textured-quad.js  timestamp-queries.js  transparency.js  triangle.js
scripts/: create-platform-packages.js  publish-with-platform-packages.js  sync-platform-versions.js
src/: adapter.rs  bind_group.rs  buffer.rs  compute_pass.rs  constants.rs  descriptors.rs  device.rs  features.rs  gpu.rs  lib.rs  (+9 more)
(+60 files in other folders)
