[package]
name = "webgpu"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["SylphxAI"]
repository = "https://github.com/SylphxAI/webgpu"
description = "WebGPU for Node.js via wgpu-rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["async", "tokio_rt"] }
napi-derive = "2"
wgpu = "0.19"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures = "0.3"
raw-window-handle = "0.6"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"  # Optimize for size
